--- a/src/quest_manager/templates/quest_manager/tab_quests_available.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_available.html
@@ -53,7 +53,7 @@
         class="panel-collapse collapse {% if q.id == active_q_id %} in {% endif %}"
         role="tabpanel" aria-labelledby="heading-quest-{{q.id}}">
         <ul class="list-group">
-          <li class="list-group-item list-group-item-buttons preview-content-{{q.id}}">
+          <li id="preview-content-{{q.id}}" class="list-group-item list-group-item-buttons">
               <p>
                 <i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i>
                 &nbsp;Loading content...
