--- a/src/quest_manager/templates/quest_manager/ajax_content_loading.html
+++ b/src/quest_manager/templates/quest_manager/ajax_content_loading.html
@@ -63,7 +63,7 @@
             csrfmiddlewaretoken: "{{ csrf_token }}",
           },
           success: function(data){
-            console.log(data)
+            //console.log(data)
             $(preview_content_selector).html(data);
           },
           error : function(xhr,errmsg,err) {
