remove GameLab references

--- a/src/profile_manager/templates/profile_manager/profile_list.html
+++ b/src/profile_manager/templates/profile_manager/profile_list.html
@@ -31,7 +31,7 @@
       <th data-sortable='true' data-field='last_sub'>Last Quest</th>
       <th data-sortable='true' data-field='username'>Student #</th>
       <th data-field='comment_ban' data-switchable="false"></th>
-      <th data-field='gamelab' data-switchable="false"></th>
+      <th data-field='skipped' data-switchable="false"></th>
       <th data-field='pw' data-switchable="false"></th>
       {% endif %}
     </tr>
