--- a/src/quest_manager/templates/quest_manager/quests.html
+++ b/src/quest_manager/templates/quest_manager/quests.html
@@ -73,7 +73,7 @@
   </div>
   {% if request.user.profile.has_past_courses %}
   <div role="tabpanel"
-  class="tab-pane fade {% if past_tab_active %}in active{% endif%}" id="completed">
+  class="tab-pane fade {% if past_tab_active %}in active{% endif%}" id="past_submissions">
     {% with submissions=past_submissions past=True %}
       {% include 'quest_manager/tab_quests_submission.html' %}
     {% endwith %}
