--- a/src/templates/configuration.html
+++ b/src/templates/configuration.html
@@ -14,13 +14,19 @@
 </form>
 <h3>Management Functions</h3>
 <div class="row">
+  <div class="col-sm-12">
+    <p>
+      <a class="btn btn-default"
+        href="/admin/courses/semester/">Semester Admin</a>
+    </p>
+  </div>
   <div class="col-sm-4">
       <a href="{% url 'end_active_semester' %}" class="btn btn-danger">End current semester</a>
   </div>
   <div class="col-sm-8">
-      This will record a
-       copy of all student marks for the semester.  Which means changing or deleting
-       quests will no longer affect their marks for that semester.
+      <p>This will permanently record all student marks for the semester.
+      Which means changing or deleting quests, submissions, or badges
+      will no longer affect their marks for that semester.</p>
   </div>
 </div>
 
