--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -31,7 +31,9 @@
 
         {% if request.user.is_authenticated and request.user.is_staff %}
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle"
+              data-toggle="dropdown" role="button" aria-haspopup="true"
+              aria-expanded="false">Admin <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <!-- <li class="dropdown-header">Content</li> -->
             <!-- <li role="separator" class="divider"></li> -->
