--- a/src/templates/configuration.html
+++ b/src/templates/configuration.html
@@ -21,7 +21,7 @@
     </p>
   </div>
   <div class="col-sm-4">
-      <a href="{% url 'end_active_semester' %}" class="btn btn-danger">End current semester</a>
+      <a href="{% url 'courses:end_active_semester' %}" class="btn btn-danger">End current semester</a>
   </div>
   <div class="col-sm-8">
       <p>This will permanently record all student marks for the semester.
