Announcement defaults update, Glyphicon & FA tidy

--- a/src/templates/head_css.html
+++ b/src/templates/head_css.html
@@ -16,7 +16,7 @@
   <!-- Font Awesome -->
   <!-- http://fortawesome.github.io/Font-Awesome/ -->
   <!--<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
-  <link href="{% static 'css/font-awesome-4.6.3/css/font-awesome.min.css' %}" rel="stylesheet">
+  <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
 
 {% if request.user.profile.dark_theme %}
   <link href="{% static 'css/bootstrap_slate.min.css' %}" rel="stylesheet">
