Ajax from not working, pull it out

--- a/src/quest_manager/templates/quest_manager/tab_quests_available.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_available.html
@@ -61,6 +61,7 @@
               <p>
                 <i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i>
                 &nbsp;Loading content...
+                <!-- preview_content_quests_avail.html via AJAX -->
               </p>
           </li>
 
