--- a/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_approvals.html
@@ -68,37 +68,39 @@
         class="panel-collapse collapse {% if s.id == active_id %} in {% endif %}"
         role="tabpanel" aria-labelledby="heading{{s.id}}">
         <ul id="preview-content-{{s.id}}" class="list-group">
-
-          <li class="list-group-item list-group-item-buttons">
-              <p>
+          <!-- <li class="list-group-item list-group-item-buttons">
+              <p> -->
                 <i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i>
                 &nbsp;Loading content...
-              </p>
-          </li>
-
+                <!-- preview_content_approvals.html via AJAX -->
+              <!-- </p>
+          </li> -->
         </ul>
 
-        
         <li class="list-group-item">
-          <form id="quick_reply{{s.id}}" method="POST" enctype="multipart/form-data" action="{% url 'quests:approve' s.id %}">{% csrf_token %}
+          <form id="quick_reply{{s.id}}" method="POST" enctype="multipart/form-data"
+                action="{% url 'quests:approve' s.id %}">{% csrf_token %}
             {{ quick_reply_form | crispy }}
             <div>
               {% if s.is_approved %}
-                <input type='submit' name='comment_button' class='btn btn-primary' value='Add Comment' />
+                <input type='submit' name='comment_button'
+                       class='btn btn-primary' value='Add Comment' />
               {% else %}
-                <input type='submit' name='approve_button' class='btn btn-success' value='Approve' />
+                <input type='submit' name='approve_button'
+                       class='btn btn-success' value='Approve' />
               {% endif %}
-                <input type='submit' name='return_button' class='btn btn-danger' value='Return' />
+                <input type='submit' name='return_button'
+                       class='btn btn-danger' value='Return' />
                 <a class="btn btn-warning" data-target="#quick_reply{{s.id}}"
                   id= "btn_quick_text{{s.id}}" role="button"
                   title='Add: "Please read the submission instructions more carefully. Thanks!"'>Please read...</a>
                 <a class="btn btn-default" href="{% url 'quests:skip' s.id %}"
                 title="Do not grant XP for this quest (or badges resulting) but mark as complete."
                 role="button">Skip</a>
+
             </div>
           </form>
         </li>
-
 
       </div>
 
