--- a/src/courses/templates/courses/xp_chart.html
+++ b/src/courses/templates/courses/xp_chart.html
@@ -1,4 +1,3 @@
-<!-- https://developers.google.com/chart/interactive/docs/basic_load_libs -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.min.js"></script>
 
 <script type="text/javascript">
@@ -6,7 +5,6 @@
   /*jshint esversion: 6 */
 
   var ctx = document.getElementById("myChart");
-  //var ctx = $("#myChart").get(0).getContext("2d");
 
   class DataPoint {
       constructor(x, y) {
@@ -21,25 +19,14 @@
   // XP DATA SET
   var XPData = {
       label: 'XP Earned',
-      //fill: false,
-      //backgroundColor: "rgba(0,0,0,0)",
-      //borderColor: "rgba(0,0,0,0)",
+      fill: false,
+      //backgroundColor: "rgba(50,50,50,0)",
+      //borderColor: "rgba(50,50,50,255)",
       pointBorderColor: "#444",
       pointBackgroundColor: "#444",
       data: [{x: 0, y: 0}],
       showLines: false,
   };
-
-  //XP Data generation
-  // var total = 0;
-  // for (var i = 0; i < 35; i++) {
-  //     total += 10 * Math.floor(Math.random() + 0.5);
-  //     total += 5 * Math.floor(Math.random() + 0.5);
-  //     total += 5 * Math.floor(Math.random() + 0.5);
-  //
-  //     var p = new DataPoint(i + 1, total);
-  //     XPData.data.push(p);
-  // }
 
 
   // XP Trend Data
@@ -50,7 +37,7 @@
       lineTension: 0,
       borderDash: [5, 5],
       borderColor: "#ccc",
-      backgroundColor: "rgba(0,0,0,0)",
+      backgroundColor: "rgba(150,150,150,0)",
       data: [{x: 0, y: 0}],
   };
 
@@ -59,7 +46,7 @@
       pointRadius: 0,
       backgroundColor: "rgba(255,255,0,0)",
       borderColor: "rgba(255, 236, 179,50)",
-      data: [],
+      data: [{x: 0, y: 0}],
   };
 
   var GradeFData = {
@@ -67,30 +54,20 @@
       pointRadius: 0,
       backgroundColor: "rgba(255, 0, 0, 0)",
       borderColor: "rgba(255, 179, 179, 50)",
-      data: [],
+      data: [{x: 0, y: 0}],
   };
 
   // Chillax Line Data Set = B
   var ChillaxLineData = {
       label: 'Chillax Line (73%)',
       pointRadius: 0,
-      backgroundColor: "rgba(0,0,0,0)",
+      backgroundColor: "rgba(0,255,255,0)",
       borderColor: "rgba(0,255,255,255)",
-      data: [],
+      data: [{x: 0, y: 0}],
   };
 
-  // Mark Line Generation
-  for (i = 1; i <= days; i++) {
-      p = new DataPoint(i, Math.floor(i * chillax * 10 / days));
-      pA = new DataPoint(i, Math.floor(i * 855 / days));
-      pF = new DataPoint(i, Math.floor(i * 495 / days));
-      ChillaxLineData.data.push(p);
-      GradeAData.data.push(pA);
-      GradeFData.data.push(pF);
-
-  }
-
-
+  // need some starting data for the animation to work it seems..
+  generate_mark_lines(100)
 
   var options = {
 
@@ -100,7 +77,7 @@
               type: 'linear',
               position: 'bottom',
               ticks: {
-                  max: days,
+                  max: 5,
                   min: 0,
                   stepSize: 5,
               },
@@ -178,14 +155,9 @@
       ]
   };
 
-  var myChart = new Chart(ctx, {
-      type: 'line',
-      data: data,
-      options: options,
-  });
-
-  function generate_trend() {
+  function generate_trend(days_in_semester) {
     // XP Trend calculaion
+    // Just a linear extrapolation of the average XP per day
     var total = 0;
     XPTrendData.data = [];
     var days_so_far = XPData.data.length;
@@ -193,7 +165,7 @@
     var average_per_day = total / days_so_far;
 
     var trend_total = total;
-    for (i = days_so_far; i <= days; i++) {
+    for (i = days_so_far; i <= days_in_semester; i++) {
 
         p = new DataPoint(i, trend_total);
         XPTrendData.data.push(p);
@@ -202,18 +174,53 @@
     }
   }
 
-  //get data fro plot and update
+  function generate_mark_lines(days) {
+    // Mark Line Generation
+    ChillaxLineData.data = [];
+    GradeAData.data = [];
+    GradeFData.data = [];
+    for (i = 1; i <= days; i++) {
+        p = new DataPoint(i, Math.floor(i * 725 / days));
+        pA = new DataPoint(i, Math.floor(i * 855 / days));
+        pF = new DataPoint(i, Math.floor(i * 495 / days));
+        ChillaxLineData.data.push(p);
+        GradeAData.data.push(pA);
+        GradeFData.data.push(pF);
+
+    }
+  }
+
+  var myChart = new Chart(ctx, {
+      type: 'line',
+      data: data,
+      options: options,
+  });
+
+  //get data for plot and update
   function ajax_update_plot() {
+
+    // user in this view is the request.user, if a student,
+    // or the user matching the id in the url
+
     $.ajax({
       type: "POST",
-      url: "{% url 'courses:ajax_progress_chart_user' request.user.id %}",
+      url: "{% url 'courses:ajax_progress_chart_user' user.id %}",
       data: {
         csrfmiddlewaretoken: "{{ csrf_token }}",
       },
       success: function(data){
-        console.log(data.xp_data);
+        // console.log(data.xp_data);
         XPData.data = data.xp_data;
-        generate_trend();
+        generate_trend(data.days_in_semester);
+        generate_mark_lines(data.days_in_semester);
+        myChart.options.scales.xAxes[0].ticks.max = data.days_in_semester;
+
+        console.log(myChart);
+
+
+
+        $('div.loading').remove();
+        $('#myChart').show("slow");
         myChart.update();
 
       }
