--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -1,15 +1,23 @@
 {% extends "profile_manager/base.html" %}
 
-{% block heading_inner %}{{ object.user.username }}'s Profile
-  <a class="btn btn-info btn-sm" href="{% url 'profiles:profile_update' object.id %}" role="button">Edit</a>
-  <a class="btn btn-default btn-sm" href="{% url 'account_change_password' %}" role="button">Change Password</a>
+{% block heading_inner %}{{ object.get_preferred_name }}'s Profile
+  <a class="btn btn-info btn-sm"
+    href="{% url 'profiles:profile_update' object.id %}"
+    role="button"><i class="fa fa-cog"></i>&nbsp;&nbsp;Edit</a>
+  <a class="btn btn-default btn-sm"
+    href="{% url 'account_change_password' %}"
+    role="button"><i class="fa fa-key"></i>&nbsp;&nbsp;Change Password</a>
+  <a class= "btn btn-default btn-sm"
+    href="{% url 'courses:marks' object.user.id %}"
+    role="button"><i class="fa fa-line-chart"></i>&nbsp;&nbsp;View Mark Calculations</a>
 {% endblock %}
 
 {% block content %}
 
 <div class="row">
   <div class="col-sm-3">
-    <img class="icon-avatar img-rounded" src="{{object.get_avatar_url}}" alt="avatar"/>
+    <img class="icon-avatar img-rounded" src="{{object.get_avatar_url}}"
+        alt="avatar"/>
   </div>
   <div class="col-sm-9">
 
