--- a/src/courses/templates/courses/xp_chart.html
+++ b/src/courses/templates/courses/xp_chart.html
@@ -1,4 +1,6 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.min.js"></script>
+<!-- https://github.com/chartjs/Chart.Zoom.js/blob/master/samples/zoom.html -->
+<!-- <script type="text/javascript" src="https://raw.githubusercontent.com/chartjs/Chart.Zoom.js/master/Chart.Zoom.min.js"></script></script> -->
 
 <script type="text/javascript">
 
@@ -20,12 +22,12 @@
   var XPData = {
       label: 'XP Earned',
       fill: false,
-      //backgroundColor: "rgba(50,50,50,0)",
-      //borderColor: "rgba(50,50,50,255)",
-      pointBorderColor: "#444",
-      pointBackgroundColor: "#444",
+      backgroundColor: "#aaa", //used for legend
+      borderColor: "#1c1e22", //used for legend
+      showLine: false,
+      pointBorderColor: "#1c1e22",
+      pointBackgroundColor: "#aaa",
       data: [{x: 0, y: 0}],
-      showLines: false,
   };
 
 
@@ -36,7 +38,7 @@
       pointRadius: 0,
       lineTension: 0,
       borderDash: [5, 5],
-      borderColor: "#ccc",
+      borderColor: "#aaa",
       backgroundColor: "rgba(150,150,150,0)",
       data: [{x: 0, y: 0}],
   };
@@ -44,6 +46,7 @@
   var GradeAData = {
       label: 'A (86%)',
       pointRadius: 0,
+      lineTension: 0,
       backgroundColor: "rgba(255,255,0,0)",
       borderColor: "rgba(255, 236, 179,50)",
       data: [{x: 0, y: 0}],
@@ -66,11 +69,19 @@
       data: [{x: 0, y: 0}],
   };
 
+  var data = {
+      datasets: [XPData,
+          XPTrendData,
+          GradeFData,
+          ChillaxLineData,
+          GradeAData,
+      ]
+  };
+
   // need some starting data for the animation to work it seems..
   generate_mark_lines(100)
 
   var options = {
-
       scales: {
 
           xAxes: [{
@@ -85,11 +96,11 @@
                   display: true,
                   labelString: 'Days of Class'
               },
-          }],
+          }], //xaxes
 
           yAxes: [{
                   id: "y-axis-XP",
-                  position: 'right',
+                  position: 'left',
                   ticks: {
                       max: 1000,
                       min: 0,
@@ -104,7 +115,7 @@
                   gridLines: {},
               }, {
                   id: "y-axis-percent",
-                  position: 'left',
+                  position: 'right',
 
                   ticks: {
                       max: 100,
@@ -129,31 +140,56 @@
               }
 
 
-          ],
-      },
+          ], //yaxes
+      }, //scales
 
       title: {
           text: 'A Map of Your Progress',
           display: false,
-      },
+      }, //title
 
       legend: {
           position: 'top',
           labels: {
 
           },
+      }, //legend
+
+      tooltips: {
+          //mode: 'label', //too slow!
+          callbacks: {
+
+          },
       },
 
+
+      // Pan & Zoom option not working well, try again when the libraries have progressed
+      //https://github.com/chartjs/Chart.Zoom.js
+      // pan: {
+      //     // Boolean to enable panning
+      //     enabled: true,
+      //
+      //     // Panning directions. Remove the appropriate direction to disable
+      //     // Eg. 'y' would only allow panning in the y direction
+      //     mode: 'xy'
+      // },
+      //
+      // // Container for zoom options
+      // zoom: {
+      //     // Boolean to enable zooming
+      //     enabled: true,
+      //
+      //     // Zooming directions. Remove the appropriate direction to disable
+      //     // Eg. 'y' would only allow zooming in the y direction
+      //     mode: 'xy',
+      //     limits: {
+      //       max: 1.5,
+      //       min: 0.5,
+      //     },
+      // },
+
   };
 
-  var data = {
-      datasets: [XPData,
-          XPTrendData,
-          GradeFData,
-          ChillaxLineData,
-          GradeAData,
-      ]
-  };
 
   function generate_trend(days_in_semester) {
     // XP Trend calculaion
@@ -224,6 +260,25 @@
       }
     });
   }
+
+  // prevent page from scrolling when scrolling to zoom chart
+  //http://stackoverflow.com/questions/1459676/prevent-scroll-bubbling-from-element-to-window
+  // here we store the window scroll position to lock; -1 means unlocked
+  var forceWindowScrollY = -1;
+
+  $(window).scroll(function(event) {
+    if(forceWindowScrollY != -1 && window.scrollY != forceWindowScrollY) {
+      $(window).scrollTop(forceWindowScrollY);
+    }
+  });
+
+  $("#myChart").hover(function() {
+    if(forceWindowScrollY == -1) {
+      forceWindowScrollY = $(window).scrollTop();
+    }
+  }, function() {
+    forceWindowScrollY = -1;
+  });
 
   $(document).ready(function() {
     ajax_update_plot();
