--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,25 +1,29 @@
 {% load staticfiles %}
 
 <footer class='footer'>
-<div class='container-fluid'>
-  <div class='row'>
-    <div class='col-sm-6'>
-      <a href="http://creativecommons.org/licenses/by/3.0/deed.en_US">
-        <img class="pull-left" src="{% static 'img/by-sa.svg' %}" alt="Creative Commons Attribution-ShareAlike Logo" />
-      </a>
-      <p class='text-muted'>Except where otherwise noted, this site is licensed under a
-        <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
-      </p>
+    <div class='container-fluid'>
+        <div class='row'>
+            <div class='col-sm-6'>
+                <a href="http://creativecommons.org/licenses/by/3.0/deed.en_US">
+                    <img class="pull-left" src="{% static 'img/by-sa.svg' %}"
+                         alt="Creative Commons Attribution-ShareAlike Logo"/>
+                </a>
+                <p class='text-muted'>Except where otherwise noted, this site is licensed under a
+                    <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons
+                        Attribution-ShareAlike 3.0 Unported License</a>.
+                </p>
+            </div>
+            <div class='col-sm-6'>
+                <a href="http://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html">
+                    <img style="width:50px;" class="pull-right" src="{% static 'img/GNU.png' %}"/>
+                </a>
+                <p class='text-muted'>The code that runs this site is free and open source.
+                    It uses the <a href="http://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html">GNU GPL v2
+                        license</a> and is available to anyone for free through
+                    <a href="https://github.com/timberline-secondary/hackerspace">Github</a>. You are free to download,
+                    modify, and distribute the code as long as you share it in the same manner!
+                </p>
+            </div>
+        </div>
     </div>
-    <div class='col-sm-6'>
-      <a href="http://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html">
-        <img style="width:50px;" class="pull-right" src="{% static 'img/GNU.png' %}" />
-      </a>
-      <p class='text-muted'>The code that runs this site is free and open source.
-        It uses the <a href="http://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html">GNU GPL v2 license</a> and is available to anyone for free through
-        <a href="https://github.com/timberline-secondary/hackerspace">Github</a>.  You are free to download, modify, and distribute the code as long as you share it in the same manner!
-      </p>
-    </div>
-  </div>
-</div>
 </footer>
