--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -4,81 +4,86 @@
 <!-- sidebar -->
 
 <div id="sidebar_menu">
-  <ul class="nav">
-    <li><a href="#" data-toggle="offcanvas" class="visible-xs text-center"><i class="fa fa-chevron-right fa-fw"></i></a></li>
-  </ul>
+    <ul class="nav">
+        <li><a href="#" data-toggle="offcanvas" class="visible-xs text-center"><i class="fa fa-chevron-right fa-fw"></i></a>
+        </li>
+    </ul>
 
     <!--so logo margins align with main div headings-->
-   <h3 class="hidden-xs">
-    <img id="logo"
-        src ="{% if request.user.profile.dark_theme %}
+    <h3 class="hidden-xs">
+        <img id="logo"
+             src="{% if request.user.profile.dark_theme %}
                  {%static 'img/banner_slate.png' %}
               {% else %}
                  {%static 'img/banner.png' %}
               {% endif %}"
-        class="img-responsive" alt="Timberline's Digital Hackerspace Logo" />
-  </h3>
-  <div class="nav list-group hidden-xs" id="lg-menu">
-      <a id="quests-menu" class="list-group-item
+             class="img-responsive" alt="Timberline's Digital Hackerspace Logo"/>
+    </h3>
+    <div class="nav list-group hidden-xs" id="lg-menu">
+        <a id="quests-menu" class="list-group-item
         {% if '/quests/' in request.path_info and not '/approvals/' in request.path_info %}active{% endif %}"
-        href="{% url 'quests:quests' %}">
-        <i class="fa fa-shield fa-fw"></i>&nbsp; Quests
-      </a>
-      <a id="achievements-menu" class="list-group-item {% if '/achievements/' in request.path_info %}active{% endif %}"
-        href="{% url 'badges:list' %}">
-        <i class="fa fa-certificate fa-fw"></i>&nbsp; Badges
-      </a>
-      <a id="groups-menu" class="list-group-item {% if '/profiles/' in request.path_info %}active{% endif %}"
-        href="{% url 'profiles:profile_list' %}">
-        <i class="fa fa-users fa-fw"></i>&nbsp; Students
-      </a>
-      <a id="announcements-menu" class="list-group-item {% if '/announcements/' in request.path_info %}active{% endif %}"
-        href="{% url 'announcements:list' %}">
-        <i class="fa fa-newspaper-o fa-fw"></i>&nbsp;
-        <span class="visible-sm-inline visible-xs-inline visible-md-inline shrinktextmore">Announce...</span>
-        <span class="hidden-sm hidden-xs hidden-md">Announcements</span>
-        <span id="announcements-badge" class="badge alert-danger list-group-item-badge "></span>
-      </a>
-  </div>
+           href="{% url 'quests:quests' %}">
+            <i class="fa fa-shield fa-fw"></i>&nbsp; Quests
+        </a>
+        <a id="achievements-menu"
+           class="list-group-item {% if '/achievements/' in request.path_info %}active{% endif %}"
+           href="{% url 'badges:list' %}">
+            <i class="fa fa-certificate fa-fw"></i>&nbsp; Badges
+        </a>
+        <a id="groups-menu" class="list-group-item {% if '/profiles/' in request.path_info %}active{% endif %}"
+           href="{% url 'profiles:profile_list' %}">
+            <i class="fa fa-users fa-fw"></i>&nbsp; Students
+        </a>
+        <a id="announcements-menu"
+           class="list-group-item {% if '/announcements/' in request.path_info %}active{% endif %}"
+           href="{% url 'announcements:list' %}">
+            <i class="fa fa-newspaper-o fa-fw"></i>&nbsp;
+            <span class="visible-sm-inline visible-xs-inline visible-md-inline shrinktextmore">Announce...</span>
+            <span class="hidden-sm hidden-xs hidden-md">Announcements</span>
+            <span id="announcements-badge" class="badge alert-danger list-group-item-badge "></span>
+        </a>
+    </div>
 
-  {% if request.user.is_staff %}
-  <div class="nav list-group hidden-xs" id="lg-menu-staff">
-      <a class="list-group-item {% if '/approvals/' in request.path_info %}active{% endif %}"
-        href="{% url 'quests:approvals' %}">
-        <i class="fa fa-shield fa-fw"></i>&nbsp;
-        <span class="visible-sm-inline visible-xs-inline visible-md-inline">Approvals</span>
-        <span class="hidden-sm hidden-xs hidden-md">Quest Approvals</span>
-        <span id="approvals_badge" class="badge alert-danger list-group-item-badge "></span>
-      </a>
-  </div>
-  {% endif %}
-
-  <!-- COMMON DATA FOR QUEST SUBJECT -->
-  <div class="hidden-xs" id="common-data">
-    {% if q.common_data %}
-    <div id="quest-common-{{q.id}}" class="panel panel-primary panel-top">
-      <div class="panel-heading">
-        <h3 class="panel-title">{{q.common_data.title}} Quest <small>General Info</small></h3>
-      </div>
-      <div class="panel-body">
-        {{ q.common_data.instructions | safe }}
-      </div>
+    {% if request.user.is_staff %}
+    <div class="nav list-group hidden-xs" id="lg-menu-staff">
+        <a class="list-group-item {% if '/approvals/' in request.path_info %}active{% endif %}"
+           href="{% url 'quests:approvals' %}">
+            <i class="fa fa-shield fa-fw"></i>&nbsp;
+            <span class="visible-sm-inline visible-xs-inline visible-md-inline">Approvals</span>
+            <span class="hidden-sm hidden-xs hidden-md">Quest Approvals</span>
+            <span id="approvals_badge" class="badge alert-danger list-group-item-badge "></span>
+        </a>
     </div>
     {% endif %}
-  </div>
 
-  <!-- tiny only nav-->
-  <ul class="nav visible-xs" id="xs-menu">
-    <li><a href="{% url 'quests:quests' %}"><i class="fa fa-shield fa-fw"></i></a></li>
-    <li><a href="#" class="text-center"><i class="fa fa-certificate fa-fw"></i></a></li>
-    <li><a href="{% url 'profiles:profile_list' %}"><i class="fa fa-users fa-fw"></i></a></li>
-    <li><a href="#" class="text-center"><i class="fa fa-newspaper-o fa-fw"></i></a></li>
-  </ul>
-  {% if request.user.is_staff %}
-  <ul class="nav visible-xs" id="xs-menu-staff">
-    <li><a href="{% url 'quests:approvals' %}"><i class="fa fa-shield fa-fw"></i></a></li>
-  </ul>
-  {% endif %}
+    <!-- COMMON DATA FOR QUEST SUBJECT -->
+    <div class="hidden-xs" id="common-data">
+        {% if q.common_data %}
+        <div id="quest-common-{{q.id}}" class="panel panel-primary panel-top">
+            <div class="panel-heading">
+                <h3 class="panel-title">{{q.common_data.title}} Quest
+                    <small>General Info</small>
+                </h3>
+            </div>
+            <div class="panel-body">
+                {{ q.common_data.instructions | safe }}
+            </div>
+        </div>
+        {% endif %}
+    </div>
+
+    <!-- tiny only nav-->
+    <ul class="nav visible-xs" id="xs-menu">
+        <li><a href="{% url 'quests:quests' %}"><i class="fa fa-shield fa-fw"></i></a></li>
+        <li><a href="#" class="text-center"><i class="fa fa-certificate fa-fw"></i></a></li>
+        <li><a href="{% url 'profiles:profile_list' %}"><i class="fa fa-users fa-fw"></i></a></li>
+        <li><a href="#" class="text-center"><i class="fa fa-newspaper-o fa-fw"></i></a></li>
+    </ul>
+    {% if request.user.is_staff %}
+    <ul class="nav visible-xs" id="xs-menu-staff">
+        <li><a href="{% url 'quests:approvals' %}"><i class="fa fa-shield fa-fw"></i></a></li>
+    </ul>
+    {% endif %}
 </div>
 
 <!-- /sidebar -->
